--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,6 +1,12 @@
+<h1>Social todo app for cpsc213</h1>
 
+{{#if errors}}
+<h1>asdfasdfasdf</h1>
+{{/if}}
 
-    <h1>Social todo app for cpsc213</h1>
+{{#if user}}
+<h1>{{this}}</h1>
+{{/if}}
 
 
 <div>
