--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,4 +10,9 @@
             {{{body}}}
         </div>
     </body>
+    
+<footer>
+    <a href="/user/logout" class="logout">Logout</a>
+</footer>
+
 </html>
