--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,11 +1,25 @@
 <h1>Social todo app for cpsc213</h1>
 
-{{#if errors}}
+{{#if login_errors}}
+<div>
+    <p>login error:</p>
 <ul class="errors">
-{{#each errors}}
+{{#each login_errors}}
+<li class="errors">{{this}}</li>
+{{/each}}
+</ul>
+</div>
+{{/if}}
+
+{{#if register_errors}}
+<div>
+    <p>login error:</p>
+<ul class="errors">
+{{#each register_errors}}
 <li class="errors">{{this.msg}}</li>
 {{/each}}
 </ul>
+</div>
 {{/if}}
 
 {{#if user}}
