complete might work!

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,70 +21,46 @@
 
     <h2 class="welcome">Welcome, {{name}}</h2>
     
+    <h4>Your Tasks</h4>
     {{#if my_tasks}}
-    {{#each my_tasks}}
-    <div>
-        <h4>Your Tasks</h4>
+    <ul class="tasks">
+        {{#each my_tasks}}
+                    <li class="task">
+                      <span class="task-title">{{this.name}}</span>
+                      <p class="description">{{this.description}}</p>
+                        <form method="post" action="/api/task/{{this._id}}/delete">
+                          <input type="submit" name="delete" class="delete" value="delete">
+                        </form>
+                      <form method="post" action="/api/task/{{this._id}}/completed">
+                        <input type="submit" name="toggle" class="toggle" value="Completed?">
+                        <p class="completed">{{this.completed}}</p>
+                    </li>
+        {{/each}}
+    </ul>
 
-            <ul class="tasks">
-                <li class="task">
-                  <span class="task-title">{{this.name}}</span>
-                    <form method="post" action="/api/task/{{this._id}}/delete">
-                      <input type="submit" name="delete" class="delete" value="delete">
-                    </form>
-                  <form method="post" action="/api/task/{{this._id}}/completed">
-                    <input type="submit" name="toggle" class="toggle" value="Mark {{#if this.completed}}
-                  not complete
-                  {{else}}
-                  complete
-                  {{/if}}">
-                  </form>
-                  {{#if this.completed}}
-                  complete
-                  {{else}}
-                  not complete
-                  {{/if}}
-                  <p class="description">Description: {{this.description}}</p>
-                </li>
-            </ul>
-    </div>
-    {{/each}}
     {{else}}
     <h1>No tasks</h1>
     {{/if}}
     
+    <h4>Shared Tasks</h4>
     {{#if shared_tasks}}
-    {{#each shared_tasks}}
-    <div>
-        <h4>Shared Tasks</h4>
-
-            <ul class="tasks">
+    <ul>
+        {{#each shared_tasks}}
                 <li class="task">
-                  <span class="task-title">{{this.name}}</span>
-                    <form method="post" action="/api/task/{{this._id}}/delete">
-                      <input type="submit" name="delete" class="delete" value="delete">
-                    </form>
-                  <form method="post" action="/api/task/{{this._id}}/completed">
-                    <input type="submit" name="toggle" class="toggle" value="Mark {{#if this.completed}}
-                  not complete
-                  {{else}}
-                  complete
-                  {{/if}}">
-                  </form>
-                  {{#if this.completed}}
-                  complete
-                  {{else}}
-                  not complete
-                  {{/if}}
-                  <p class="description">Description: {{this.description}}</p>
-                </li>
-            </ul>
-    </div>
-    {{/each}}
+                      <span class="task-title">{{this.name}}</span>
+                      <p class="description">{{this.description}}</p>
+                        <form method="post" action="/api/task/{{this._id}}/delete">
+                          <input type="submit" name="delete" class="delete" value="delete">
+                        </form>
+                      <form method="post" action="/api/task/{{this._id}}/completed">
+                        <input type="submit" name="toggle" class="toggle" value="Completed?">
+                        <p class="completed">{{this.completed}}</p>
+                    </li>
+        {{/each}}
+        </ul>
     {{else}}
-    <h1>No tasks</h1>
+    <h4>No tasks</h4>
     {{/if}}
-    
     <hr>
     <div>
         <h4>Add a new task</h4>
