--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -36,6 +36,7 @@
                       <form method="post" action="/api/task/{{this._id}}/completed">
                         <input type="submit" name="toggle" class="toggle" value="Completed?">
                         <p class="completed">{{this.completed}}</p>
+                      </form>
                         </div>
                     </li>
         {{/each}}
@@ -47,7 +48,7 @@
     
     <h4>Shared Tasks</h4>
     {{#if shared_tasks}}
-    <ul>
+    <ul class="tasks">
         {{#each shared_tasks}}
                 <li class="task">
                       <span class="name">Name: {{this.name}}</span>
@@ -55,10 +56,10 @@
                         <p class="creator">Creator: {{this.creator}}</p>
                       <form method="post" action="/api/task/{{this._id}}/completed">
                         <div>
-                        <input type="submit" name="toggle" class="toggle" value="Completed?">
-                        <p class="completed">{{this.completed}}</p>
+                          <input type="submit" name="toggle" class="toggle" value="Completed?">
+                          <p class="completed">{{this.completed}}</p>
                         </div>
-                        </form>
+                      </form>
                     </li>
         {{/each}}
         </ul>
